cloud/w10/temp/security-rbac-admission/gatekeeper/templates/template-required-owner-label.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredownerlabel
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredOwnerLabel
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredownerlabel

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels.owner
          msg := "metadata.labels.owner is required"
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not input.review.object.spec.containers
          msg := "pod must have containers"
        }
